Added available date endpoint